--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
 body {
+  background-color: #00BCD4;
   font-family: 'Gloria Hallelujah', Helvetica, Arial;
 }
 
