--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -3,3 +3,9 @@
 This is what you look like, according to your Google account:<br>
 
 <%= image_tag(@user.picture_url) %>
+
+<h1>Hey, Nat. Sup?
+<br>Julia</br></h1>
+<br>Find out about us here</br>
+<%= Time.now %>
+
