set default font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Gloria+Hallelujah);
+@import url(//fonts.googleapis.com/css?family=Cutive+Mono);
 
 body {
-  font-family: 'Gloria Hallelujah', Helvetica, Arial;
+  font-family: 'Cutive Mono', Helvetica, Arial;
 }
