--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -3,3 +3,8 @@
 This is what you look like, according to your Google account:<br>
 
 <%= image_tag(@user.picture_url) %>
+
+
+Here's your first post:
+
+<%= @post.content %>
