--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<% if signed_in? %>
-  <%= link_to "Sign out", destroy_user_session_path %>
-<% end %>
-<div class="logo">
-<%= link_to root_path do %>
-  <%= image_tag "logo.png", height: "120" %>
-<% end %>
-</div>
-
-<%= yield %>
-
+	<div class="logo">
+		<%= link_to root_path do %>
+		  <%= image_tag "logo.png", height: "120" %>
+		<% end %>
+	</div>
+	<% if signed_in? %>
+		<%= render partial: "shared/nav"%>
+	<% end %>
+	<%= yield %>
 </body>
 </html>
