--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -4,9 +4,15 @@ This is what you look like, according to your Google account:<br>
 
 <%= image_tag(@user.picture_url) %> <br>
 
-Here's your first post: <br>
+Create a new post:
+<form action="/?????">
+  Post content: <input type="text" name="content"><br>
+  <input type="submit" value="Submit">
+</form>
 
-<%= @post.content %> <br>
 
-
-  
+<% if @post %>
+	Here's your first post: <br>
+	<%= @post.content %> <br>
+<% end %>
+ 
