--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,8 @@ This is what you look like, according to your Google account:<br>
 
 <%= image_tag(@user.picture_url) %> <br>
 
-<% if @post %>
-	Here's your first post: <br>
-	<%= @post.content %> <br>
+<ul>
+<% @posts.each do |post| %>
+    <li><%= post.content %></li>
 <% end %>
- 
+</ul>
