Added a profile link

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,2 +1,5 @@
-<p><%= current_user.email %></p>
+<%= image_tag(current_user.picture_url) %> <br>
+
+
 <p><%= current_user.full_name %></p>
+<p><%= current_user.email %></p>
