--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<li>	
+	<li>
 	  <%= link_to "Sign out", destroy_user_session_path %>
 	</li>
 	<li>
@@ -7,5 +7,8 @@
 	</li>
 	<li>
 		<%= link_to "About", about_path %>
+	</li>
+	<li>
+		<%= link_to "Profile", profile_path %>
 	</li>
 </ul>
