background/font color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,8 @@
 
 body {
   font-family: 'Cutive Mono', Helvetica, Arial;
-  background-color: #00BCD4;
-  color: #f35818;
+  background-color: #446f01;
+  color: #ff4b00;
 }
 
 
